--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Etch-a-Sketch</h1>
-    <button>Change Grid</button>
+    <div class="header">
+        <h1>Etch-a-Sketch</h1>
+        <button>Change Grid</button>
+    </div>
     <div class="container"></div>
 </body>
 </html>
